Refactor new Java features into Java 8 for deployment